Fixed Scrolling stuck bug 👍

--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -4,6 +4,7 @@
   margin-right: -15px;
   color: rgb(95, 95, 95);
   cursor: pointer;
+  z-index: 10;
 }
 
 .sidebar-header {
